--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.10.0",
     "@tailwindcss/vite": "^4.0.3",
     "axios": "^1.7.9",
+    "es6-set": "^0.1.6",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
